# Chatbot-RAG

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260314_0001_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/analytics/: __init__.py  service.py
backend/app/api/: analytics.py  chat.py  feedback.py  health.py  schemas.py
backend/app/core/: config.py  logger.py  runtime_checks.py  security.py
backend/app/db/: models.py  postgres.py  vector_store.py
backend/app/guardrails/: input_guard.py  output_guard.py
backend/app/llm/: client.py
backend/app/memory/: redis_history.py
backend/app/orchestrator/: chat_service.py  prompt_builder.py  router.py
backend/app/prompts/: general_v1.txt  rag_answer_v1.txt
backend/app/rag/: chunker.py  embeddings.py  ingestion_seed.py  retriever.py
backend/tests/integration/: test_api_contracts.py
backend/tests/unit/: test_chat_service.py  test_chunker.py  test_config.py  test_ingestion_seed.py  test_input_guard.py  test_output_guard.py  test_prompt_builder.py  test_router.py
data/docs/: hr_policy.md  onboarding_guide.md  travel_policy.md
docs/: architecture.md
frontend/: README.md  package-lock.json  package.json  vitest.config.ts
frontend/app/: globals.css  layout.tsx
frontend/components/: AnalyticsDashboard.tsx  ChatWindow.tsx  CitationPanel.tsx  FeedbackButtons.tsx  MessageBubble.tsx  SessionSidebar.tsx
frontend/lib/: api.ts
scripts/: preflight.py  seed_knowledge_base.py
(+3 files in other folders)
