[project]
name = "enterprise-rag-chatbot-backend"
version = "0.1.0"
description = "FastAPI backend for the enterprise RAG chatbot MVP."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.16,<2",
  "fastapi>=0.115,<1",
  "google-genai>=1.15,<2",
  "greenlet>=3.2,<4",
  "openai>=1.109,<2",
  "pgvector>=0.4,<1",
  "psycopg[binary]>=3.2,<4",
  "pydantic-settings>=2.8,<3",
  "redis>=6,<7",
  "sqlalchemy>=2.0,<3",
  "tiktoken>=0.9,<1",
  "uvicorn>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "fakeredis>=2.31,<3",
  "httpx>=0.28,<1",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
  "pytest-cov>=6,<7",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
  "integration: tests that expect infrastructure or broader service wiring",
]
pythonpath = ["."]
testpaths = ["tests"]

[tool.uv]
package = false
